--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "http-status": "^2.1.0",
     "mongoose": "^8.17.1",
     "nodemon": "^3.1.10",
     "zod": "^4.0.17"
